--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,25 @@
-h1 {
+/* Selects all elements */
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+
+  h1 {
     color: black;
     font-size: 100px;
+}
+
+.panda {
+    border: white;
+    border-style: solid;
+    border-width: 5px
+}
+
+.panda-wave {
+    border: white;
+    border-style: solid;
+    border-width: 5px;
+}
+
+.container {
+    background-color: black;
 }
